# DT-Archie

./: .gitignore  CHANGELOG.md  LICENSE  README.md  entrypoint_pella.py  main.py  pyproject.toml
archie.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: main.py
src/archie.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/commands/: commands_module.py  slash_commands_module.py
src/database/: database_module.py
src/events/: events_module.py
src/label/: FR_category.json  FR_help.txt  FR_help_slash.txt  FR_label.json  FR_tag.json  label_module.py
src/logger/: logger_module.py
