[project]
name = "archie"
version = "0.1.0"
description = "Discord bot helper for Dofus Touch daily quests"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "discord-py>=2.7.1",
    "pickledb>=1.6",
    "python-dotenv>=1.2.2",
]
license = {file = "LICENSE"}

[dependency-groups]
check = [
    "ruff>=0.15.13",
]
commit = [
    "commitizen>=4.16.2",
]

[build-system]
requires = ["setuptools"]