[project]
name = "archie"
version = "0.5.0"
description = "Discord bot helper for Dofus Touch daily quests"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "discord-py>=2.7.1",
    "pickledb>=1.6",
    "python-dotenv>=1.2.2",
]
license = {file = "LICENSE"}

[project.scripts]
dt_archie = "src.main:startup_bot"

[dependency-groups]
check = [
    "ruff>=0.15.13",
]
commit = [
    "commitizen>=4.16.2",
]

[build-system]
requires = ["setuptools"]

[tool.setuptools]
packages = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
